--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.tutorial-mod.pink_garnet": "Pink Garnet",
   "item.tutorial-mod.raw_pink_garnet": "Raw Pink Garnet",
   "item.tutorial-mod.chisel": "Chisel",
+  "item.tutorial-mod.cauliflower": "Cauliflower",
+  "item.tutorial-mod.starlight_ashes": "Starlight Ashes",
 
   "block.tutorial-mod.pink_garnet_block": "Block of Pink Garnet",
   "block.tutorial-mod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
@@ -12,5 +14,11 @@
   "block.tutorial-mod.magic_block": "Magic Block",
 
   "itemgroup.tutorial-mod.pink_garnet_items": "Pink Garnet Items",
-  "itemgroup.tutorial-mod.pink_garnet_blocks": "Pink Garnet Blocks"
+  "itemgroup.tutorial-mod.pink_garnet_blocks": "Pink Garnet Blocks",
+
+  "tooltip.tutorial-mod.magic_block.1": "Do you have too much garnet and want more diamonds?",
+  "tooltip.tutorial-mod.magic_block.2": "Well do I have the §9magical block§r for you.",
+  "tooltip.tutorial-mod.chisel.shift_down": "This item chisels blocks into bricks!",
+  "tooltip.tutorial-mod.chisel": "Press §eShift§r for more Information!",
+  "tooltip.tutorial-mod.cauliflower": "Eat food = good"
 }
