--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -5,6 +5,12 @@
   "item.tutorial-mod.cauliflower": "Cauliflower",
   "item.tutorial-mod.starlight_ashes": "Starlight Ashes",
 
+  "item.tutorial-mod.pink_garnet_sword": "Pink Garnet Sword",
+  "item.tutorial-mod.pink_garnet_pickaxe": "Pink Garnet Pickaxe",
+  "item.tutorial-mod.pink_garnet_shovel": "Pink Garnet Shovel",
+  "item.tutorial-mod.pink_garnet_axe": "Pink Garnet Axe",
+  "item.tutorial-mod.pink_garnet_hoe": "Pink Garnet Hoe",
+
   "block.tutorial-mod.pink_garnet_block": "Block of Pink Garnet",
   "block.tutorial-mod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
 
