--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -11,6 +11,8 @@
   "item.tutorial-mod.pink_garnet_axe": "Pink Garnet Axe",
   "item.tutorial-mod.pink_garnet_hoe": "Pink Garnet Hoe",
 
+  "item.tutorial-mod.pink_garnet_hammer": "Pink Garnet Hammer",
+
   "block.tutorial-mod.pink_garnet_block": "Block of Pink Garnet",
   "block.tutorial-mod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
 
