--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -13,6 +13,11 @@
 
   "item.tutorial-mod.pink_garnet_hammer": "Pink Garnet Hammer",
 
+  "item.tutorial-mod.pink_garnet_helmet": "Pink Garnet Helmet",
+  "item.tutorial-mod.pink_garnet_chestplate": "Pink Garnet Chestplate",
+  "item.tutorial-mod.pink_garnet_leggings": "Pink Garnet Leggings",
+  "item.tutorial-mod.pink_garnet_boots": "Pink Garnet Boots",
+
   "block.tutorial-mod.pink_garnet_block": "Block of Pink Garnet",
   "block.tutorial-mod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
 
