--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -22,6 +22,8 @@
 
   "item.tutorial-mod.kaupen_armor_trim_smithing_template": "Kaupen Smithing Template",
 
+  "item.tutorial-mod.kaupen_bow": "Kaupen Bow",
+
   "block.tutorial-mod.pink_garnet_block": "Block of Pink Garnet",
   "block.tutorial-mod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
 
