--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "effect.tutorial-mod.slimey": "Slimey",
 
+  "enchantment.tutorial-mod.lightning_striker": "Lightning Striker",
+
   "item.tutorial-mod.pink_garnet": "Pink Garnet",
   "item.tutorial-mod.raw_pink_garnet": "Raw Pink Garnet",
   "item.tutorial-mod.chisel": "Chisel",
