--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -31,6 +31,8 @@
   "item.tutorial-mod.bar_brawl_music_disc": "Bar Brawl Music Disc",
   "item.tutorial-mod.bar_brawl_music_disc.desc": "Bryan Tech - Bar Brawl (CC0)",
 
+  "item.tutorial-mod.cauliflower_seeds": "Cauliflower Seeds",
+
   "item.minecraft.potion.effect.slimey_potion": "Slimey Potion",
   "item.minecraft.splash_potion.effect.slimey_potion": "Slimey Splash Potion",
   "item.minecraft.lingering_potion.effect.slimey_potion": "Slimey Lingering Potion",
@@ -55,6 +57,8 @@
 
   "block.tutorial-mod.pink_garnet_door": "Pink Garnet Door",
   "block.tutorial-mod.pink_garnet_trapdoor": "Pink Garnet Trapdoor",
+
+  "block.tutorial-mod.cauliflower_crop": "Cauliflower Crop",
 
   "itemgroup.tutorial-mod.pink_garnet_items": "Pink Garnet Items",
   "itemgroup.tutorial-mod.pink_garnet_blocks": "Pink Garnet Blocks",
