--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -77,6 +77,8 @@
   "block.tutorial-mod.driftwood_leaves": "Driftwood Leaves",
   "block.tutorial-mod.driftwood_sapling": "Driftwood Sapling",
 
+  "block.tutorial-mod.chair": "Chair",
+
   "itemgroup.tutorial-mod.pink_garnet_items": "Pink Garnet Items",
   "itemgroup.tutorial-mod.pink_garnet_blocks": "Pink Garnet Blocks",
 
