Animated texture and 3d item model

--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -41,6 +41,8 @@
 
   "item.tutorial-mod.tomahawk": "Tomahawk",
 
+  "item.tutorial-mod.spectre_staff": "Spectre Staff",
+
   "item.minecraft.potion.effect.slimey_potion": "Slimey Potion",
   "item.minecraft.splash_potion.effect.slimey_potion": "Slimey Splash Potion",
   "item.minecraft.lingering_potion.effect.slimey_potion": "Slimey Lingering Potion",
