Custom Villager Profession

--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -6,6 +6,8 @@
   "entity.tutorial-mod.mantis": "Mantis",
   "entity.tutorial-mod.tomahawk": "Tomahawk",
 
+  "entity.minecraft.villager.kaupenger": "Kaupenger",
+
   "item.tutorial-mod.pink_garnet": "Pink Garnet",
   "item.tutorial-mod.raw_pink_garnet": "Raw Pink Garnet",
   "item.tutorial-mod.chisel": "Chisel",
