Pedestal Block Entity

--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -83,6 +83,8 @@
 
   "block.tutorial-mod.chair": "Chair",
 
+  "block.tutorial-mod.pedestal": "Pedestal",
+
   "itemgroup.tutorial-mod.pink_garnet_items": "Pink Garnet Items",
   "itemgroup.tutorial-mod.pink_garnet_blocks": "Pink Garnet Blocks",
 
