Growth Chamber Block

--- a/src/main/resources/assets/tutorial-mod/lang/en_us.json
+++ b/src/main/resources/assets/tutorial-mod/lang/en_us.json
@@ -84,6 +84,7 @@
   "block.tutorial-mod.chair": "Chair",
 
   "block.tutorial-mod.pedestal": "Pedestal",
+  "block.tutorial-mod.growth_chamber": "Growth Chamber",
 
   "itemgroup.tutorial-mod.pink_garnet_items": "Pink Garnet Items",
   "itemgroup.tutorial-mod.pink_garnet_blocks": "Pink Garnet Blocks",
